# AI-Tutor

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
docs/: COMMANDS.md  CONTEXT_MANAGEMENT.md  DESIGN.md  DEVELOPMENT.md  PRIVACY.md  ROADMAP.md  WORKFLOWS.md
examples/nanogpt/: README.md
src/ai_tutor/: __init__.py  cli.py  scaffold.py
templates/: README.md
templates/domain/: Domain Profile.md
templates/global/: Global Learner Profile.md
templates/workspace/: Concept Map.md  Context Packet.md  Episode Queue.md  Misconceptions.md  Session Log.md  Source Index.md  TUTOR.md  Workspace Bridge.md
tests/: test_scaffold.py
